@@ -1,6 +1,6 @@
 GammaLib information
 ====================
-* Version: 1.8.0.dev (11 September 2020)
+* Version: 1.8.0.dev (18 September 2020)
 
 [![Build Status](https://cta-jenkins.irap.omp.eu/buildStatus/icon?job=gammalib-integrate-os)](https://cta-jenkins.irap.omp.eu/job/gammalib-integrate-os/)
 
